Modified various files to align with requested changes or fixes

--- a/common/styles/globals.css
+++ b/common/styles/globals.css
@@ -93,7 +93,6 @@ a:hover {
 p {
   line-height: 1.75;
   max-width: var(--typicalMaxWidth);
-  padding: 16px 0;
 }
 
 #root {
